# c_cpp_project_generator

./: CMakeLists.txt
src/: main.cpp
